--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   carousel_slider: ^4.0.0
   flutter_swiper: ^1.1.5
   percent_indicator: ^3.0.1
+  # equatable: ^1.2.6
+  flutter_bloc: ^7.0.1
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -53,9 +55,6 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - lib/assets/bacground image.jpg
-    - lib/assets/1.jpg
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
